--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   line-height: 1.5;
   box-sizing: border-box;
   --bottom-line: 1px solid #ccb9b5;
+  --main-pink-color: #ccb9b5;
 }
 
 :root > * {
@@ -60,7 +61,7 @@ main {
 }
 
 .first-main-flex {
-  padding-bottom: 2%;
+  padding-bottom: 0.8rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -76,8 +77,8 @@ h1 {
 .sorter {
   font-size: 0.7rem;
   white-space: nowrap;
-  background-color: #ccb9b5;
-  padding: 0.3rem;
+  background-color: var(--main-pink-color);
+  padding: 0.3em;
   border-radius: 5px;
   box-shadow: 0 13px 27px -15px rgba(50,50,93,.25), 0 8px 16px -8px rgba(0,0,0,.3), 0 -6px 16px -6px rgba(0,0,0,.025);
   border: 1px solid rgba(0,0,0,.05);
@@ -86,8 +87,7 @@ h1 {
 .repo-card {
   border-bottom: var(--bottom-line);
   display: flex;
-  padding-top: 0.8rem;
-  padding-bottom: 0.8rem;
+  padding: 0.8rem 0;
 }
 
 .repsitory-icon {
@@ -113,11 +113,11 @@ h1 {
 */
 .stars img {
   vertical-align: text-bottom;
-  margin-right: 0.1rem
+  margin-right: 0.1em
 }
 
 .github-link {
-  color: #ccb9b5;
+  color: var(--main-pink-color);
   text-decoration: none;
 }
 
@@ -125,10 +125,43 @@ h1 {
   text-decoration: underline;
 }
 
+.pagination-container {
+  margin: 0.8rem 0;
+  text-align: center;
+}
 
 .pagination-container > * {
-  padding: 5px 10px;
+  display: inline-block;
+  margin: 0.1em;
+  padding: 0.4em 0.8em;
+  text-decoration: none;
+  color: black;
+  cursor: default;
+  border: 1px solid transparent;
 }
+
+.pagination-container a {
+  cursor: pointer;
+}
+
+.pagination-container a:hover {
+  border-radius: 5px;
+  border: var(--bottom-line);
+}
+
+.current-page {
+  border: 1px solid rgba(0,0,0,.05);
+  background-color: var(--main-pink-color);
+  border-radius: 5px;
+  box-shadow: 0 13px 27px -15px rgba(50,50,93,.25), 0 8px 16px -8px rgba(0,0,0,.3), 0 -6px 16px -6px rgba(0,0,0,.025);
+}
+
+.disabled {
+  color: gray;
+}
+
+
+
 
 
 
